[package]
name = "shadow"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = "0.4.42"

[dev-dependencies]
tower = { version = "0.4", features = ["full"] }
http-body-util = "0.1"
hyper = "1"
